--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>Tasks</title>
+  <link rel="shortcut icon" href="src/images/tasks.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="src/css/styles.css">
+  <meta http-equiv="Cache-Control" content="private">
 </head>
 <body>
-  <h1>project-scaffoldings</h1>
+  <div class="wrapper">
+    <main class="main">
+        <h1><span class="glyphicon glyphicon-search"></span> test</h1>
+    </main>
+    <footer class="footer">
+      <p>футер</p>
+    </footer>
+  </div>
 </body>
 </html>
