Added responsive layaut

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
   <meta http-equiv="Cache-Control" content="private">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="ap-wrapper">
     <main class="main">
         <h1><span class="glyphicon glyphicon-search"></span> test </h1>
     </main>
     <footer class="footer">
-      <p>футер</p>
+      <ul>
+        <li><span class="glyphicon glyphicon-search"></span></li>
+        <li></li>
+      </ul>      
     </footer>
   </div>
 </body>
