--- a/index.html
+++ b/index.html
@@ -18,8 +18,36 @@
     </main>
     <footer class="footer">
       <ul>
-        <li><span class="glyphicon glyphicon-search"></span></li>
-        <li></li>
+        <li>
+          <a href="#">
+            <span class="glyphicon glyphicon glyphicon-plus-sign"></span>
+            New
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="glyphicon glyphicon-search"></span>
+            Search
+          </a>
+        </li>        
+        <li>
+          <a href="#">
+            <span class="glyphicon glyphicon-cog"></span>
+            Settings
+          </a>
+        </li>
+        <li>
+          <a href="#">
+             <span class="glyphicon glyphicon-calendar"></span>
+             Calendar
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="glyphicon glyphicon-trash"></span>
+            Deleated
+          </a>
+        </li>
       </ul>      
     </footer>
   </div>
