made today header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
 <body>
   <div class="ap-wrapper">
     <main class="main">
-        <h1><span class="glyphicon glyphicon-search"></span> test </h1>
+      
+      <div class="today">
+        <div class="today__week"></div>
+        <div class="today__name">Today:</div>
+        <div class="today__date-wrapper">
+            <div class="today__date"></div>
+            <span class="today__date-logo glyphicon glyphicon-calendar"></span>
+        </div>
+      </div>
+
     </main>
+
     <footer class="footer">
       <ul>
         <li>
