--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
   <title>Tasks</title>
   <link rel="shortcut icon" href="src/images/tasks.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
@@ -14,16 +15,84 @@
 <body>
   <div class="ap-wrapper">
     <main class="main">
-      
-      <div class="today">
-        <div class="today__week"></div>
-        <div class="today__name">Today:</div>
-        <div class="today__date-wrapper">
-            <div class="today__date"></div>
-            <span class="today__date-logo glyphicon glyphicon-calendar"></span>
+      <div class="main-view">
+        
+        <div class="day-header">
+          <div class="day-header__week"></div>
+          <div class="day-header__name">Today:</div>
+          <div class="day-header__date-wrapper">
+              <div class="day-header__date"></div>
+              <span class="day-header__date-logo glyphicon glyphicon-calendar"></span>
+          </div>
+        </div>
+
+        <div class="task">
+          <div class="task__task-main">
+              <div class="task__task-date-type">
+                  <span class="glyphicon glyphicon-log-in">
+              </div>
+              <div class="task__task-date"></div>
+              <div class="task__task-header">Some task header 1</div>
+              <div class="task__task-type">
+                <span class="glyphicon glyphicon-briefcase">
+              </div>
+              <div class="task__task-edit-button">
+                <span class="glyphicon glyphicon-option-horizontal"></span>
+              </div>
+              <div class="task__task-deleat-button">
+                  <span class="glyphicon glyphicon-remove"></span>
+              </div>
+          </div>              
+          <div class="task__task-details">some task details details details details details 1</div>
+        </div>
+
+        <div class="day-header">
+          <div class="day-header__week"></div>
+          <div class="day-header__name">Tomorrow:</div>
+          <div class="day-header__date-wrapper">
+              <div class="day-header__date"></div>
+              <span class="day-header__date-logo glyphicon glyphicon-calendar"></span>
+          </div>
         </div>
       </div>
 
+      <div class="task-edit">
+          <div class="task-edit__top-panel">
+            <div class="task-edit__type-case">
+              <span class="glyphicon glyphicon-briefcase"></span>
+            </div>
+            <div class="task-edit__type-case">
+              <span class="glyphicon glyphicon-earphone"></span>
+            </div>
+            <div>
+              <input type="time" name="task-time">
+              <input type="date" name="task-day">
+            </div>
+            <div class="task-edit__date-type-up-to">
+              <span class="glyphicon glyphicon-log-in"></span>
+            </div>
+            <div class="task-edit__date-type-all-day">
+              <span class="glyphicon glyphicon-unchecked"></span>  
+            </div>
+            <div class="task-edit_date-type-start-from">
+              <span class="glyphicon glyphicon-log-out"></span>  
+            </div>                           
+          </div>
+          <div style="text-align:center">Task header</div>
+          <input class="task-edit__task-header" type="text">
+          <p>Task details</p>
+          <textarea rows="4" cols="50"></textarea>
+          <div class="task-edit__buttons-wrapper">
+            <div class="task-edit_button-save">
+              Save
+              <span class="glyphicon glyphicon-ok"></span>
+            </div>
+            <div class="task-edit__button-remove">
+              Remove
+              <span class="glyphicon glyphicon-remove"></span>
+            </div>
+          </div>
+      </div>
     </main>
 
     <footer class="footer">
