made 'days ago' auto switching

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
           <div class="day-header__week"></div>
           <div class="day-header__name-wrapper">
             <button type="button" class="main-date__prev-btn btn btn-outline-info"><span class="glyphicon glyphicon-backward"></span></button>
-            <div class="day-header__name">Today:</div>
+            <div class="day-header__name"></div>
             <button type="button" class="main-date__next-btn btn btn-outline-info"><span class="glyphicon glyphicon-forward"></span></button>
           </div>
-          <div class="day-header__date-wrapper border border-info rounded">
-              <div class="day-header__date"></div>
-              <span class="day-header__date-logo glyphicon glyphicon-calendar"></span>
+          <div class="day-header__date-wrapper">
+            <input class="day-header__date border border-info rounded" type="date">
+            <!--button type="button" class="btn btn-outline-light text-dark">
+              <span class="glyphicon glyphicon-calendar"></span>
+            </button-->
           </div>
         </div>
 
