--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
           <p class="text-center">Task header</p>
           <input class="task-edit__task-header border border-info rounded" type="text">
-          <p class="task-edit__header-error text-left text-danger invisible">You must type header</p>
+          <p class="task-edit__header-error text-left text-danger invisible">You must type min 4 symbols here</p>
           <p class="text-center">Task details</p>
           <textarea class="task-edit__task-details border border-info rounded" rows="10"></textarea>
           <div class="task-edit__buttons-wrapper">
