--- a/index.html
+++ b/index.html
@@ -26,43 +26,12 @@
             <button type="button" class="main-date__next-btn btn btn-outline-info"><span class="glyphicon glyphicon-forward"></span></button>
           </div>
           <div class="day-header__date-wrapper">
-            <input class="day-header__date border border-info rounded" type="date">
-            <!--button type="button" class="btn btn-outline-light text-dark">
-              <span class="glyphicon glyphicon-calendar"></span>
-            </button-->
+            <input class="day-header__date border border-info rounded" type="date">       
           </div>
         </div>
 
-        <div class="tasks-container">
-          <!--div class="task">
-            <div class="task__task-main">
-                <div class="task__task-date-type ">
-                    <span class="glyphicon glyphicon-log-in"></span>
-                </div>
-                <div class="task__task-date"></div>
-                <div class="task__task-header">Some task header 1</div>
-                <div class="task__task-type">
-                  <span class="glyphicon glyphicon-briefcase"></span>
-                </div>
-                <div class="task__task-edit-button">
-                  <span class="glyphicon glyphicon-option-horizontal"></span>
-                </div>
-                <div class="task__task-deleat-button">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </div>
-            </div>              
-            <div class="task__task-details">some task details details details details details 1</div>
-          </div-->
-        </div>
-          <div class="day-header">
-            <div class="day-header__week"></div>
-            <div class="day-header__name">Tomorrow:</div>
-            <div class="day-header__date-wrapper">
-                <div class="day-header__date"></div>
-                <span class="day-header__date-logo glyphicon glyphicon-calendar"></span>
-            </div>
-          </div>
-        </div>
+        <div class="tasks-container"></div>          
+      </div>
 
       <div class="task-edit hidden">
           <div class="task-edit__top-panel">
