--- a/indexSrc.html
+++ b/indexSrc.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"-->
+  <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"-->
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
   <title>Tasks</title>
   <link rel="shortcut icon" href="src/images/tasks.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
@@ -20,7 +20,7 @@
         <div class="day-header">
           <div class="day-header__week"></div>
           <div class="day-header__name-wrapper">
-            <button type="button" class="main-date__prev-btn btn btn-outline-info"><img src="../src/images/back.svg" alt="previous date button" height="16" width="16"></img></button>
+            <button type="button" class="main-date__prev-btn btn btn-outline-info"><img src="src/images/back.svg" alt="previous date button" height="16" width="16"></img></button>
             <div class="day-header__name"></div>
             <button type="button" class="main-date__next-btn btn btn-outline-info"><span class="glyphicon glyphicon-forward"></span></button>
           </div>
@@ -135,5 +135,5 @@
       </ul>      
     </footer>
   </div>
-
+</body>
 </html>
