--- a/index.html
+++ b/index.html
@@ -135,6 +135,6 @@
       </ul>      
     </footer>
   </div>
-  <script type="text/javascript" src="bundle.js"></script>
+  <script type="text/javascript" src="assets/bundle.js"></script>
 </body>
 </html>
