test with assets

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tasks</title>
   <link rel="shortcut icon" href="src/images/tasks.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="dist/styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles.css">
   <meta http-equiv="Cache-Control" content="private">
 </head>
 <body>
@@ -133,6 +133,6 @@
       </ul>
     </footer>
   </div>
-  <script type="text/javascript" src="dist/bundle.js"></script>
+  <script type="text/javascript" src="assets/bundle.js"></script>
 </body>
 </html>
