made 'npm run build'

--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
       </ul>
     </footer>
   </div>
-  <script type="text/javascript" src="assets/bundle.js"></script>
-</body>
+
+<script type="text/javascript" src="assets/bundle.js"></script></body>
 </html>
