fixed visibility main menue on smartphone 2

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <menue class="footer">
       <ul>
         <li>
           <button class="footer-button button-new btn btn-outline-info" type="button">
@@ -131,7 +131,7 @@
           </a>
         </li>
       </ul>
-    </footer>
+    </menue>
   </div>
 
 <script type="text/javascript" src="assets/bundle.js"></script></body>
