fixed bug main menye float with keyboard

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </main>
 
-    <menue class="footer">
+    <div class="footer">
       <ul>
         <li>
           <button class="footer-button button-new btn btn-outline-info" type="button">
@@ -131,7 +131,7 @@
           </a>
         </li>
       </ul>
-    </menue>
+    </div>
   </div>
 
 <script type="text/javascript" src="assets/bundle.js"></script></body>
