--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <li>
           <a class="footer-button button-trash" href="#">
             <img src="src/images/deleted.svg" height="20" width="20">
-            Deleted
+            Deleted.
           </a>
         </li>
       </ul>
