--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </main>
 
-    <div class="footer">
+    <footer class="footer">
       <ul>
         <li>
           <button class="footer-button button-new btn btn-outline-info" type="button">
@@ -107,31 +107,31 @@
           </button>
         </li>
         <li>
-          <a class="footer-button button-search" href="#">
+          <button class="footer-button button-search btn btn-outline-info" type="button" disabled>
             <img src="src/images/search.svg" height="20" width="20">
             Search
-          </a>
+          </button>
         </li>        
         <li>
-          <a class="footer-button button-config" href="#">
+          <button class="footer-button button-config btn btn-outline-info" type="button" disabled>
             <img src="src/images/settings.svg" height="20" width="20">
             Settings
-          </a>
+          </button>
         </li>
         <li>
-          <a class="footer-button button-calendar" href="#">
+          <button class="footer-button button-today btn btn-outline-info" type="button">
              <img src="src/images/calendar.svg" height="20" width="20">
-             Calendar
-          </a>
+             Today
+          </button>
         </li>
         <li>
-          <a class="footer-button button-trash" href="#">
+          <button class="footer-button button-trash btn btn-outline-info" type="button" disabled>
             <img src="src/images/deleted.svg" height="20" width="20">
-            Deleted.
-          </a>
+            Deleted
+          </button>
         </li>
       </ul>
-    </div>
+    </footer>
   </div>
 
 <script type="text/javascript" src="assets/bundle.js"></script></body>
