--- a/src/indexSrc.html
+++ b/src/indexSrc.html
@@ -90,7 +90,7 @@
               <img src="src/images/ok.svg" height="20" width="20">
               Save              
             </button>           
-            <button class="task-edit__button-remove btn btn-outline-danger" type="button">
+            <button class="task-edit__button-remove btn btn-outline-danger" type="button" disabled>
               <img src="src/images/remove.svg" height="20" width="20">
               Remove              
             </button>
@@ -107,28 +107,28 @@
           </button>
         </li>
         <li>
-          <a class="footer-button button-search" href="#">
+          <button class="footer-button button-search btn btn-outline-info" type="button" disabled>
             <img src="src/images/search.svg" height="20" width="20">
             Search
-          </a>
+          </button>
         </li>        
         <li>
-          <a class="footer-button button-config" href="#">
+          <button class="footer-button button-config btn btn-outline-info" type="button" disabled>
             <img src="src/images/settings.svg" height="20" width="20">
             Settings
-          </a>
+          </button>
         </li>
         <li>
-          <a class="footer-button button-calendar" href="#">
+          <button class="footer-button button-today btn btn-outline-info" type="button">
              <img src="src/images/calendar.svg" height="20" width="20">
-             Calendar
-          </a>
+             Today
+          </button>
         </li>
         <li>
-          <a class="footer-button button-trash" href="#">
+          <button class="footer-button button-trash btn btn-outline-info" type="button" disabled>
             <img src="src/images/deleted.svg" height="20" width="20">
-            Deleted.
-          </a>
+            Deleted
+          </button>
         </li>
       </ul>
     </div>
